gitops-apps/vaultwarden/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ip-whitelist@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vaultwarden.zmartin.me
      secretName: wildcard-zmartin-me
  rules:
    - host: vaultwarden.zmartin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
